objects/HealthCloudGA__EhrConditionRelatedItem__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__CodeLabel__c</fullName>
        <label>Code Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CodeSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Code System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Code__c</fullName>
        <description>Category Symbol in syntax defined by the system</description>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition</label>
        <referenceTo>HealthCloudGA__EhrCondition__c</referenceTo>
        <relationshipLabel>EHR Conditon Related Items</relationshipLabel>
        <relationshipName>ConditonRelatedItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If returns true, the record will appear on Patient Card</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationStatement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medication Statement</label>
        <referenceTo>HealthCloudGA__EhrMedicationStatement__c</referenceTo>
        <relationshipLabel>EHR Conditon Related Items</relationshipLabel>
        <relationshipName>ConditonRelatedItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TargetCondition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Condition</label>
        <referenceTo>HealthCloudGA__EhrCondition__c</referenceTo>
        <relationshipLabel>EHR Conditon Related Items (Target Condition)</relationshipLabel>
        <relationshipName>TargetConditonRelatedItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TargetDetail__c</fullName>
        <label>Target Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TargetImmunization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Immunization</label>
        <referenceTo>HealthCloudGA__EhrImmunization__c</referenceTo>
        <relationshipLabel>EHR Conditon Related Items</relationshipLabel>
        <relationshipName>ConditonRelatedItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EHR Condition Related Item</label>
    <nameField>
        <label>EHR Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EHR Conditon Related Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>